--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "react-native-android-keyboard-adjust": "^1.2.0",
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-btr": "^1.1.4",
+    "react-native-color": "^0.0.10",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-hsv-color-picker": "^0.0.4",
     "react-native-image-base64": "^0.1.3",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.28.1",
