--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "color-harmony-generator": "^0.1.2",
     "i": "^0.3.6",
     "install": "^0.12.2",
     "native-base": "^2.12.1",
     "npm": "^6.9.0",
     "react": "16.8.3",
+    "react-colorizer": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-native": "0.59.8",
     "react-native-android-keyboard-adjust": "^1.2.0",
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-btr": "^1.1.4",
     "react-native-color": "^0.0.10",
+    "react-native-color-picker": "^0.4.1",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-hsv-color-picker": "^0.0.4",
